<resources>
    <string name="app_name">Consumptor</string>
    <string name="title_activity_deleteme">Deleteme</string>
    <string name="odometer_km_format">%1$d km</string>
    <string name="fuel_liter_format">%1$d l</string>
    <string name="odometer_hint">Odometer value</string>
    <string name="fuel_hint">Fuel added(in litres)</string>
    <string name="fuel_entry_create">Create</string>
    <string name="fuel_validation_failed">Enter a fuel amount</string>
    <string name="odometer_validation_failed">Enter a odometer value</string>
    <string name="display_units">Display units</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="lp100km_title">Litres per 100 km</string>
    <string name="mpg_title">Miles per gallon</string>
    <string name="lp100km_short_title">l/100km</string>
    <string name="mpg_short_title">mpg</string>
    <string name="date_hint">Date</string>
    <string name="time_hint">Time</string>
    <string name="fuel_entry_date_invalid">Date cannot be before the last created entry</string>
    <string name="fuel_entry_odometer_invalid">Odometer value cannot be less than the previous one</string>
</resources>
